--- a/SHA512.ipynb
+++ b/SHA512.ipynb
@@ -1,31 +1,21 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Untitled7.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Function"
-      ],
       "metadata": {
         "id": "imeOtxLgT_Sg"
-      }
+      },
+      "source": [
+        "# Function"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "56qqi6FGhwdM"
+      },
+      "outputs": [],
       "source": [
         "def SHA512(mess):\n",
         "\n",
@@ -67,15 +57,6 @@
         "        return (number >> amount) | (number << (64 - amount)) & 0xFFFFFFFFFFFFFFFF\n",
         "\n",
         "\n",
-        "    def rotate_left(number, amount):\n",
-        "        number = number & 0xFFFFFFFFFFFFFFFF\n",
-        "        return (number << amount) | (number >> (64 - amount)) & 0xFFFFFFFFFFFFFFFF\n",
-        "\n",
-        "\n",
-        "    def shift_left(number, amount):\n",
-        "        return number << amount\n",
-        "\n",
-        "\n",
         "    def shift_right(number, amount):\n",
         "        return number >> amount\n",
         " \n",
@@ -112,9 +93,9 @@
         "                s0 = (rotate_right(w[i-15], 1) ^ rotate_right(w[i-15], 8) ^ shift_right(w[i-15], 7)) & 0xFFFFFFFFFFFFFFFF\n",
         "                s1 = (rotate_right(w[i-2], 19) ^ rotate_right(w[i-2], 61) ^ shift_right(w[i-2], 6)) & 0xFFFFFFFFFFFFFFFF\n",
         "                w[i] = (w[i-16] + s0 + w[i-7] + s1) & 0xFFFFFFFFFFFFFFFF\n",
-        "            # initialize hash value for this chunk\n",
+        "            # initialize variables to current hash value\n",
         "            a, b, c, d, e, f, g, h = h0, h1, h2, h3, h4, h5, h6, h7\n",
-        "            # main loop: https://tools.ietf.org/html/rfc6234\n",
+        "            # compression function: https://tools.ietf.org/html/rfc6234\n",
         "            for i in range(80):\n",
         "                S1 = (rotate_right(e, 14) ^ rotate_right(e, 18) ^ rotate_right(e, 41)) & 0xFFFFFFFFFFFFFFFF\n",
         "                ch = ((e & f) ^ ((~e) & g)) & 0xFFFFFFFFFFFFFFFF\n",
@@ -140,52 +121,109 @@
         "\n",
         "        hash_pieces = [h0, h1, h2, h3, h4, h5, h6, h7]\n",
         "        \n",
-        "        digested = sum(shift_left(x, 64 * i) for i, x in enumerate(hash_pieces[::-1]))\n",
-        "        raw = digested.to_bytes(64, byteorder='big')\n",
-        "        format_str = '{:0' + str(2 * 64) + 'x}'\n",
-        "        return format_str.format(int.from_bytes(raw, byteorder='big'))\n",
+        "        return ''.join(hex(x)[2:].zfill(16) for x in hash_pieces)\n",
         "\n",
+        "      \n",
         "    return hashing(mess)"
-      ],
-      "metadata": {
-        "id": "56qqi6FGhwdM"
-      },
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Use here!"
-      ],
       "metadata": {
         "id": "C6sIqvckTuzi"
-      }
+      },
+      "source": [
+        "# Use here!"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "your_hash = input('Message you want hashed: ')\n",
-        "print('Hashed message: ', SHA512(your_hash))"
-      ],
+      "execution_count": 2,
       "metadata": {
-        "id": "SewWlhg_kWPg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "SewWlhg_kWPg",
         "outputId": "f974debc-c2aa-4bc3-aacf-7662450236e3"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Message you want hashed: test\n",
             "Hashed message:  ee26b0dd4af7e749aa1a8ee3c10ae9923f618980772e473f8819a5d4940e0db27ac185f8a0e1d5f84f88bc887fd67b143732c304cc5fa9ad8e6f57f50028a8ff\n"
           ]
         }
+      ],
+      "source": [
+        "your_hash = input('Message you want hashed: ')\n",
+        "print('Hashed message: ', SHA512(your_hash))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy.random as nr\n",
+        "from hashlib import sha512\n",
+        "\n",
+        "def true_hash_SHA2(data):\n",
+        "    h = sha512()\n",
+        "    if isinstance(data, str):\n",
+        "        data = bytes(data, encoding='utf8')\n",
+        "    h.update(data)\n",
+        "    return h.hexdigest()\n",
+        "\n",
+        "def random_string(size=10000):\n",
+        "    alphabets = \"0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz\"\n",
+        "    return ''.join(alphabets[nr.randint(len(alphabets))] for _ in range(size))\n",
+        "\n",
+        "for i in range(1000):\n",
+        "    mess = random_string()\n",
+        "    a = true_hash_SHA2(mess)\n",
+        "    b = SHA512(mess)\n",
+        "    assert a == b, f\"Error! My implementation hashed {b} but hashlib hashed {a} :(\"\n",
+        "    "
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Untitled7.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.9.9 64-bit",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.9"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
